rename folder update html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <!-- endbuild -->
 
 <!-- build:css css/core.css -->
-<link rel="stylesheet" href="./css/foundation.css">
-<link rel="stylesheet" href="./css/normalize.css">
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./styles/foundation.css">
+<link rel="stylesheet" href="./styles/normalize.css">
+<link rel="stylesheet" href="./styles/main.css">
 <!-- endbuild -->
 
 </head>
